examples/errors/return_from_void.ign
<program>
  <function name=aa>
    <return>
      {"should not work"}
    </return>
  </function>
</program>